--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="balloon"></div>
 
     <audio autoplay loop controls style="display: none;">
-        <source src="https://assets.mixkit.co/music/preview/mixkit-happy-birthday-to-you-528.mp3" type="audio/mpeg">
+        <source src="https://hamidreza01.github.io/temp-repo/music.mp3" type="audio/mpeg">
         مرورگر شما از پخش موزیک پشتیبانی نمی‌کند.
     </audio>
 </body>
