--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="balloon"></div>
 
     <audio autoplay loop controls style="display: none;">
-        <source src="https://hamidreza01.github.io/temp-repo/music.mp3" type="audio/mpeg">
+        <source src="https://dl.mehrdl.top/Music/A/P/Tavalodinsta/babi%20-%20Babak-ImaniHBD.mp3" type="audio/mpeg">
         مرورگر شما از پخش موزیک پشتیبانی نمی‌کند.
     </audio>
 </body>
