--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="balloon"></div>
 
     <audio autoplay loop controls style="display: none;">
-        <source src="https://hamidreza01.github.io/temp-repo/file.wav" type="audio/wav">
+        <source src="file.wav" type="audio/wav">
     </audio>
 </body>
 </html>
