--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
             margin-bottom: 20px;
             color: #ff6f61; 
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            animation: fadeIn 2s ease-in-out;
         }
         p {
             font-size: 1.2rem;
             line-height: 2rem;
             color: #444;
+            animation: slideIn 3s ease-in-out;
         }
         .container {
             max-width: 600px;
@@ -41,17 +43,48 @@
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
         button {
-            padding: 10px 20px;
+            padding: 12px 25px;
             background: #ff6f61;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 10px;
             cursor: pointer;
-            font-size: 1rem;
+            font-family: Vazir, Tahoma, sans-serif;
+            font-size: 1.2rem;
             margin-top: 20px;
+            transition: all 0.3s ease;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
         button:hover {
             background: #e85c50;
+            transform: translateY(-3px);
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+        }
+        button:active {
+            transform: translateY(0);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+        @keyframes slideIn {
+            0% { transform: translateY(100%); }
+            100% { transform: translateY(0); }
+        }
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2rem;
+            }
+            p {
+                font-size: 1rem;
+                line-height: 1.8rem;
+            }
+            button {
+                font-size: 1rem;
+                padding: 10px 20px;
+            }
         }
     </style>
 </head>
