--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
 
     <audio id="audio" style="display: none;" loop>
-        <source src="file.wav" type="audio/wav">
+        <source src="music.mp3" type="audio/mpeg">
     </audio>
 
     <script>
