--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#ff6f61"> 
+    <meta name="theme-color" content="#ff6f61">
     <title>🎉 جشن تولد ماهور 🎉</title>
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazir-font@v30.1.0/dist/font-face.css" rel="stylesheet">
     <style>
@@ -24,7 +24,7 @@
         h1 {
             font-size: 3rem;
             margin-bottom: 20px;
-            color: #ff6f61; 
+            color: #ff6f61;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
             animation: fadeIn 2s ease-in-out;
         }
@@ -41,6 +41,7 @@
             background: rgba(255, 255, 255, 0.9);
             border-radius: 15px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            position: relative;
         }
         button {
             padding: 12px 25px;
@@ -55,6 +56,8 @@
             transition: all 0.3s ease;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            opacity: 0;
+            animation: fadeIn 2s ease-in-out 1s forwards;
         }
         button:hover {
             background: #e85c50;
@@ -65,6 +68,40 @@
             transform: translateY(0);
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
+        .circle {
+            position: absolute;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.4);
+            animation: float 10s infinite ease-in-out;
+        }
+        .circle:nth-child(1) {
+            width: 80px;
+            height: 80px;
+            top: 20%;
+            left: 10%;
+            animation-duration: 7s;
+        }
+        .circle:nth-child(2) {
+            width: 120px;
+            height: 120px;
+            top: 30%;
+            left: 70%;
+            animation-duration: 9s;
+        }
+        .circle:nth-child(3) {
+            width: 100px;
+            height: 100px;
+            top: 70%;
+            left: 40%;
+            animation-duration: 11s;
+        }
+        .circle:nth-child(4) {
+            width: 150px;
+            height: 150px;
+            top: 50%;
+            left: 80%;
+            animation-duration: 13s;
+        }
         @keyframes fadeIn {
             0% { opacity: 0; }
             100% { opacity: 1; }
@@ -72,6 +109,14 @@
         @keyframes slideIn {
             0% { transform: translateY(100%); }
             100% { transform: translateY(0); }
+        }
+        @keyframes float {
+            0%, 100% {
+                transform: translateY(0) translateX(0);
+            }
+            50% {
+                transform: translateY(-20px) translateX(20px);
+            }
         }
         @media (max-width: 600px) {
             h1 {
@@ -89,6 +134,11 @@
     </style>
 </head>
 <body>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+
     <div class="container">
         <h1>🎉 تولدت مبارک ماهور! 🎉</h1>
         <p>
@@ -103,7 +153,7 @@
     </div>
 
     <audio id="audio" style="display: none;" loop>
-        <source src="music.mp3" type="audio/mpeg">
+        <source src="file.wav" type="audio/wav">
     </audio>
 
     <script>
