--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             align-items: center;
             overflow: hidden;
             direction: rtl;
+            position: relative;
         }
         h1 {
             font-size: 3rem;
@@ -71,37 +72,16 @@
         .circle {
             position: absolute;
             border-radius: 50%;
-            background: rgba(255, 255, 255, 0.4);
+            background: rgba(255, 255, 255, 0.5);
             animation: float 10s infinite ease-in-out;
+            z-index: 1;
         }
-        .circle:nth-child(1) {
-            width: 80px;
-            height: 80px;
-            top: 20%;
-            left: 10%;
-            animation-duration: 7s;
-        }
-        .circle:nth-child(2) {
-            width: 120px;
-            height: 120px;
-            top: 30%;
-            left: 70%;
-            animation-duration: 9s;
-        }
-        .circle:nth-child(3) {
-            width: 100px;
-            height: 100px;
-            top: 70%;
-            left: 40%;
-            animation-duration: 11s;
-        }
-        .circle:nth-child(4) {
-            width: 150px;
-            height: 150px;
-            top: 50%;
-            left: 80%;
-            animation-duration: 13s;
-        }
+        .circle:nth-child(1) { width: 100px; height: 100px; top: 10%; left: 15%; animation-duration: 8s; }
+        .circle:nth-child(2) { width: 140px; height: 140px; top: 20%; left: 70%; animation-duration: 10s; }
+        .circle:nth-child(3) { width: 90px; height: 90px; top: 60%; left: 40%; animation-duration: 12s; }
+        .circle:nth-child(4) { width: 160px; height: 160px; top: 50%; left: 80%; animation-duration: 14s; }
+        .circle:nth-child(5) { width: 200px; height: 200px; top: 30%; left: 30%; animation-duration: 16s; }
+
         @keyframes fadeIn {
             0% { opacity: 0; }
             100% { opacity: 1; }
@@ -111,29 +91,26 @@
             100% { transform: translateY(0); }
         }
         @keyframes float {
-            0%, 100% {
-                transform: translateY(0) translateX(0);
-            }
-            50% {
-                transform: translateY(-20px) translateX(20px);
-            }
+            0%, 100% { transform: translateY(0) translateX(0); }
+            50% { transform: translateY(-20px) translateX(20px); }
         }
         @media (max-width: 600px) {
-            h1 {
-                font-size: 2rem;
+            h1 { font-size: 2rem; }
+            p { font-size: 1rem; line-height: 1.8rem; }
+            button { font-size: 1rem; padding: 10px 20px; }
+            .circle {
+                background: rgba(255, 255, 255, 0.6);
             }
-            p {
-                font-size: 1rem;
-                line-height: 1.8rem;
-            }
-            button {
-                font-size: 1rem;
-                padding: 10px 20px;
-            }
+            .circle:nth-child(1) { width: 120px; height: 120px; }
+            .circle:nth-child(2) { width: 180px; height: 180px; }
+            .circle:nth-child(3) { width: 110px; height: 110px; }
+            .circle:nth-child(4) { width: 200px; height: 200px; }
+            .circle:nth-child(5) { width: 220px; height: 220px; }
         }
     </style>
 </head>
 <body>
+    <div class="circle"></div>
     <div class="circle"></div>
     <div class="circle"></div>
     <div class="circle"></div>
