--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#ff6f61">
-    <title>🎉 جشن تولد ماهور 🎉</title>
+    <title>🎉 جشن تولد ماهرو 🎉</title>
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazir-font@v30.1.0/dist/font-face.css" rel="stylesheet">
     <style>
         body {
@@ -140,14 +140,14 @@
     <div class="circle"></div>
 
     <div class="container">
-        <h1>🎉 تولدت مبارک ماهور! 🎉</h1>
+        <h1>🎉 تولدت مبارک ماهرو! 🎉</h1>
         <p>
             سلام به همه دوستای خوبم!<br>
             امسال هم می‌خوام جشن تولدم رو با شما برگزار کنم. روز <strong>۴ ام بهمن</strong>، از ساعت <strong>۴ تا ۷ عصر</strong>، منتظرتون هستم.<br>
             بیایید تا با هم خوش بگذرونیم و یه روز قشنگ رو کنار هم بسازیم.<br>
             جای شما تو این جشن خالیه، پس حتماً بیایید! 🎂🎈<br>
             منتظرتون هستم! 😊<br>
-            ماهور
+            ماهرو
         </p>
         <button onclick="playAudio()">پخش آهنگ🎵</button>
     </div>
